--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -827,11 +827,22 @@ body.mobile-nav-active {
         transition: ease-in-out .2s;
     }
 
+    .showPrevSchedule,
+    .hidePrevSchedule {
+        display: none;
+        cursor: pointer;
+        padding: 0 10px 10px;
+    }
+
     .schedule-item {
         border-bottom: 1px solid #cad4f6;
         padding-top: 10px;
         padding-bottom: 10px;
         transition: background-color ease-in-out 0.3s;
+
+        &.showHide {
+            border-bottom: none;
+        }
 
         &:hover {
             background-color: #fff;
