--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -735,6 +735,40 @@ body.mobile-nav-active {
     }
 }
 
+#liveGallery {
+    background: rgba(6, 12, 34, 0.98);
+
+    #liveSlider {
+        &>div {
+            text-align: center;
+
+            h5 {
+                text-align: center;
+                color: goldenrod;
+                padding: 10px 2px;
+                font-size: 1.2rem;
+            }
+        }
+    }
+
+    .tns-nav {
+        text-align: center;
+
+        button {
+            color: white;
+            border-radius: 50%;
+            height: 20px;
+            width: 20px;
+            border: none;
+            margin: 5px;
+
+            &.tns-nav-active {
+                color: goldenrod;
+            }
+        }
+    }
+}
+
 #schedule {
 
     #csTzSelect+.btn.dropdown-toggle {
