Live Gallery: click to open video modal - done

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -747,6 +747,7 @@ body.mobile-nav-active {
             text-align: center;
 
             div.thumb {
+                cursor: pointer;
                 width: 340px;
                 margin: 0 auto;
                 padding: 10px;
